--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,7 +1,7 @@
 // colours
 $accent: #740304;
 $dark: #030201;
-$light: #fafbfa;
+$light: #fafef0;
 
 // fonts
 $font-default: -apple-system, sans-serif;
