--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -27,17 +27,13 @@ a {
 	}
 
 	&.invisible {
-		color: $dark;
+		color: $dark !important;
 		border-bottom: none;
 		transition: none;
 	}
 
 	&:visited {
 		color: darken($accent, 10%);
-		border-bottom: 1px solid transparentize(darken($accent, 10%), 1);
-			&:hover {
-				border-bottom: 1px solid darken($accent, 10%);
-			}
 	}
 }
 
