lato is a worthy alternative of -apple-system

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -4,4 +4,4 @@ $dark: #030201;
 $light: #fafef0;
 
 // fonts
-$font-default: -apple-system, sans-serif;
+$font-default: -apple-system, lato, sans-serif;
