--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -13,6 +13,7 @@ body {
 	font-family: $font-default;
 	background-color: $light;
 	margin: 1rem;
+	font-weight: 300;
 }
 
 a {
@@ -20,7 +21,7 @@ a {
 	text-decoration: none;
 	transition: background-color 0.4s ease;
 	background-color: transparentize($accent, 1);
-	padding: .2em;
+	padding: $margin-tiny;
 
 	&:hover {
 		background-color: transparentize($accent, .8);
@@ -44,7 +45,11 @@ header {
 
 h1 {
 	float: left;
-	margin: 1rem;
+	margin: 1rem 0;
+}
+
+h3 {
+	margin: 1rem 0;
 }
 
 nav {
@@ -55,7 +60,7 @@ nav {
 		list-style-type: none;
 		border: 1px $accent solid;
 		border-right: none;
-		padding: .2rem 0;
+		padding: $margin-tiny 0;
 		&:first-child {
 			border-top-left-radius: 3px;
 			border-bottom-left-radius: 3px;
@@ -74,3 +79,69 @@ nav {
 	}
 }
 
+footer {
+	@extend %clearfix;
+	div {
+		width: percentage(1/3);
+		padding: 0 5%;
+		float: left;
+		vertical-align: bottom;
+
+		@media all and (max-width: 700px) {
+			width: 100%;
+			padding: 5%;
+		}
+	}
+
+	li {
+		list-style-type: none;
+		margin: $margin-tiny;
+	}
+}
+
+.content {
+	margin: 2rem;
+}
+
+.date {
+	font-size: .8em;
+	font-style: italic;
+	color: transparentize($accent, .4);
+}
+
+.menu {
+	margin: 2rem;
+	@extend %clearfix;
+	li {
+		list-style-type: none;
+	}
+
+	ul ul {
+		margin: 1%;
+		@extend %clearfix;
+		float: left;
+		width: 98%;
+
+		@media all and (min-width: 700px) {
+			width: 48%;
+		}
+	}
+
+	.name {
+		font-size: 2em;
+		float: left;
+	}
+
+	.contains {
+		font-style: italic;
+		color: transparentize($accent, .4);
+		clear: left;
+		float: left;
+	}
+
+	.price {
+		vertical-align: top;
+		float: right;
+		font-size: 1.5em;
+	}
+}
