--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,7 +1,16 @@
 // colours
 $accent: #740304;
-$dark: #030201;
-$light: #fafef0;
+$dark: #010101;
+$light: #FEFEFE;
 
 // fonts
+@font-face {
+  font-family: 'Lato';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Lato Regular'), local('Lato-Regular'), url(http://fonts.gstatic.com/s/lato/v11/pQ091WwCqK_i0BhMWeZ4BPesZW2xOQ-xsNqO47m55DA.ttf) format('truetype');
+}
 $font-default: -apple-system, lato, sans-serif;
+
+// margins
+$margin-tiny: .2em;
