--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -7,6 +7,7 @@
 
 html {
 	box-sizing: border-box;
+	line-height: 1.4;
 }
 
 body {
@@ -34,7 +35,7 @@ a {
 	}
 
 	&:visited {
-		color: darken($accent, 10%);
+		color: darken($accent, 5%);
 	}
 }
 
@@ -49,7 +50,7 @@ h1 {
 }
 
 h3 {
-	margin: 1rem 0;
+	margin-bottom: 1rem;
 }
 
 nav {
@@ -81,16 +82,19 @@ nav {
 
 footer {
 	@extend %clearfix;
+	margin: 10%;
 	div {
 		width: percentage(1/3);
-		padding: 0 5%;
+		padding: 0 2%;
 		float: left;
 		vertical-align: bottom;
 
 		@media all and (max-width: 700px) {
 			width: 100%;
-			padding: 5%;
+			padding: 2%;
 		}
+		border: 1px solid $accent;
+		border-radius: 5px;
 	}
 
 	li {
