--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -13,7 +13,7 @@ html {
 body {
 	font-family: $font-default;
 	background-color: $light;
-	margin: 1rem;
+	margin: 1em;
 	font-weight: 300;
 }
 
@@ -42,20 +42,29 @@ a {
 header {
 	@extend %clearfix;
 	width: 100%;
+	@media all and (max-width: 550px) {
+		display: flex;
+		justify-content: center;
+		// flex-direction: column;
+
+		& > * {
+			width: 100%;
+		}
+	}
 }
 
 h1 {
 	float: left;
-	margin: 1rem 0;
+	margin: 1em 0;
 }
 
 h3 {
-	margin-bottom: 1rem;
+	margin-bottom: 1em;
 }
 
 nav {
 	float: right;
-	margin: 1rem;
+	margin: 1em;
 	li {
 		float: left;
 		list-style-type: none;
@@ -72,29 +81,25 @@ nav {
 			border-bottom-right-radius: 3px;
 		}
 	}
-
-	@media all and (max-width: 550px) {
-		width: 100%;
-		margin: 1rem auto;
-		text-align: center;
-	}
 }
 
 footer {
 	@extend %clearfix;
-	margin: 10%;
-	div {
-		width: percentage(1/3);
-		padding: 0 2%;
-		float: left;
-		vertical-align: bottom;
+	margin: 0 10%;
+	display: flex;
+	justify-content: center;
+	@media all and (max-width: 700px) {
+		flex-direction: column;
+	}
 
-		@media all and (max-width: 700px) {
-			width: 100%;
-			padding: 2%;
+	div {
+		@media all and (min-width: 700px) {
+			width: percentage(1/3);
+			margin: 0;
 		}
-		border: 1px solid $accent;
-		border-radius: 5px;
+		margin: 1em;
+		float: left;
+		padding: 0 5%;
 	}
 
 	li {
@@ -104,7 +109,7 @@ footer {
 }
 
 .content {
-	margin: 2rem;
+	margin: 2em;
 }
 
 .date {
@@ -114,13 +119,13 @@ footer {
 }
 
 .menu {
-	margin: 2rem;
+	margin: 2em;
 	@extend %clearfix;
 	li {
 		list-style-type: none;
 	}
 
-	ul ul {
+	.dish{
 		margin: 1%;
 		@extend %clearfix;
 		float: left;
@@ -144,8 +149,9 @@ footer {
 	}
 
 	.price {
-		vertical-align: top;
 		float: right;
 		font-size: 1.5em;
+		position: top;
+		margin: .5em;
 	}
 }
