--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -42,15 +42,16 @@ a {
 header {
 	@extend %clearfix;
 	width: 100%;
-	@media all and (max-width: 550px) {
-		display: flex;
-		justify-content: center;
-		// flex-direction: column;
 
-		& > * {
-			width: 100%;
-		}
+	display: flex;
+	justify-content: center;
+	flex-basis: 10%;
+	align-items: baseline;
+
+	@media all and (max-width: 500px) {
+		flex-direction: column;
 	}
+
 }
 
 h1 {
@@ -131,7 +132,7 @@ footer {
 		float: left;
 		width: 98%;
 
-		@media all and (min-width: 700px) {
+		@media all and (min-width: 780px) {
 			width: 48%;
 		}
 	}
