--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -13,7 +13,7 @@ html {
 body {
 	font-family: $font-default;
 	background-color: $light;
-	margin: 1em;
+	margin: 1rem;
 	font-weight: 300;
 }
 
@@ -57,16 +57,16 @@ header {
 
 h1 {
 	float: left;
-	margin: 1em 0;
+	margin: 1rem 0;
 }
 
 h3 {
-	margin-bottom: 1em;
+	margin-bottom: 1rem;
 }
 
 nav {
 	float: right;
-	margin: 1em;
+	margin: 1rem;
 	li {
 		float: left;
 		list-style-type: none;
@@ -99,7 +99,7 @@ footer {
 			width: percentage(1/3);
 			margin: 0;
 		}
-		margin: 1em;
+		margin: 1rem;
 		float: left;
 		padding: 0 5%;
 	}
@@ -111,7 +111,7 @@ footer {
 }
 
 .content {
-	margin: 2em;
+	margin: 2rem;
 
 	p {
 		margin: 1em 0;
@@ -119,13 +119,13 @@ footer {
 }
 
 .date {
-	font-size: .8em;
+	font-size: .8rem;
 	font-style: italic;
 	color: transparentize($accent, .4);
 }
 
 .menu {
-	margin: 2em;
+	margin: 2rem;
 	@extend %clearfix;
 	li {
 		list-style-type: none;
@@ -143,7 +143,7 @@ footer {
 	}
 
 	.name {
-		font-size: 2em;
+		font-size: 2rem;
 		max-width: 80%;
 		@media all and (max-width: 500px) { max-width: 70%;}
 		@media all and (max-width: 350px) { max-width: 65%;}
@@ -160,8 +160,8 @@ footer {
 
 	.price {
 		float: right;
-		font-size: 1.5em;
+		font-size: 1.5rem;
 		position: top;
-		margin: .5em;
+		margin: .5rem;
 	}
 }
