--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -41,6 +41,7 @@ a {
 
 header {
 	@extend %clearfix;
+	@extend %wrapper;
 	width: 100%;
 
 	@media all and (max-width: 700px) {
@@ -87,7 +88,7 @@ nav {
 
 footer {
 	@extend %clearfix;
-	margin: 0 10%;
+	@extend %wrapper;
 	display: flex;
 	justify-content: center;
 	@media all and (max-width: 700px) {
@@ -97,7 +98,7 @@ footer {
 	div {
 		@media all and (min-width: 700px) {
 			width: percentage(1/3);
-			margin: 0;
+			padding: 0 1%;
 		}
 		margin: 1rem;
 		float: left;
@@ -111,7 +112,7 @@ footer {
 }
 
 .content {
-	margin: 2rem;
+	@extend %wrapper;
 
 	p {
 		margin: 1em 0;
@@ -138,7 +139,10 @@ footer {
 		width: 98%;
 
 		@media all and (min-width: 780px) {
-			width: 48%;
+			width: percentage(1/2) - 2%;
+		}
+		@media all and (min-width: 1300px) {
+			width: percentage(1/3) - 3%;
 		}
 	}
 
@@ -175,19 +179,12 @@ footer {
 	padding: 5rem 0;
 
 	h2 {
-		margin: .5rem;
+		margin-bottom: .5rem;
 		color: $accent;
-	}
-
-	p {
-		margin: 0;
 	}
 
 	h2, p {
 		background-color: $light;
-		max-width: 80%;
-		margin-right: auto;
-		margin-left: auto;
 		@extend %wrapper;
 	}
 }
